// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Quota event handlers fetchQuota All quotas are returned 1`] = `
Array [
  Array [
    Object {
      "text": "
          SELECT * FROM ref_cpu_quota;
          ",
    },
  ],
]
`;

exports[`Quota event handlers fetchQuota All quotas are returned 2`] = `200`;

exports[`Quota event handlers fetchQuota All quotas are returned 3`] = `
Array [
  Object {
    "cpuLimits": 1.5,
    "cpuRequests": 0.5,
    "createdAt": "2021-03-17T23:06:05.112Z",
    "id": "cpu-request-0.5-limit-1.5",
    "updatedAt": "2021-03-17T23:06:05.112Z",
  },
  Object {
    "cpuLimits": 2,
    "cpuRequests": 1,
    "createdAt": "2021-03-17T23:06:05.112Z",
    "id": "cpu-request-1-limit-2",
    "updatedAt": "2021-03-17T23:06:05.112Z",
  },
  Object {
    "cpuLimits": 8,
    "cpuRequests": 4,
    "createdAt": "2021-03-17T23:06:05.112Z",
    "id": "cpu-request-2-limit-4",
    "updatedAt": "2021-03-17T23:06:05.112Z",
  },
  Object {
    "cpuLimits": 8,
    "cpuRequests": 4,
    "createdAt": "2021-03-17T23:06:05.112Z",
    "id": "cpu-request-4-limit-8",
    "updatedAt": "2021-03-17T23:06:05.112Z",
  },
  Object {
    "cpuLimits": 8,
    "cpuRequests": 4,
    "createdAt": "2021-03-17T23:06:05.112Z",
    "id": "cpu-request-8-limit-16",
    "updatedAt": "2021-03-17T23:06:05.112Z",
  },
  Object {
    "cpuLimits": 8,
    "cpuRequests": 4,
    "createdAt": "2021-03-17T23:06:05.112Z",
    "id": "cpu-request-16-limit-32",
    "updatedAt": "2021-03-17T23:06:05.112Z",
  },
  Object {
    "cpuLimits": 64,
    "cpuRequests": 32,
    "createdAt": "2021-03-17T23:06:05.112Z",
    "id": "cpu-request-4-limit-8",
    "updatedAt": "2021-03-17T23:06:05.112Z",
  },
]
`;

exports[`Quota event handlers fetchQuota Quota query error should throw 1`] = `"Unable fetch quotas"`;

exports[`Quota event handlers fetchQuota Quota query error should throw 2`] = `
Array [
  Array [
    Object {
      "text": "
          SELECT * FROM ref_cpu_quota;
          ",
    },
  ],
]
`;

exports[`Quota event handlers fetchQuotaSizes All quota sizes are returned 1`] = `
Array [
  Array [
    Object {
      "text": "SELECT id, cpu_requests, cpu_limits FROM ref_cpu_quota;",
    },
  ],
  Array [
    Object {
      "text": "SELECT id, memory_requests, memory_limits FROM ref_memory_quota;",
    },
  ],
  Array [
    Object {
      "text": "SELECT id, storage_pvc_count, storage_File , storage_backup FROM ref_storage_quota;",
    },
  ],
  Array [
    Object {
      "text": "SELECT id, snapshot_volume FROM ref_snapshot_quota;",
    },
  ],
]
`;

exports[`Quota event handlers fetchQuotaSizes All quota sizes are returned 2`] = `200`;

exports[`Quota event handlers fetchQuotaSizes All quota sizes are returned 3`] = `
Object {
  "CPU_QuotaSize_Detail": Array [
    Object {
      "cpuNums": Array [
        0.5,
        1.5,
      ],
      "name": "cpu-request-0.5-limit-1.5",
    },
    Object {
      "cpuNums": Array [
        1,
        2,
      ],
      "name": "cpu-request-1-limit-2",
    },
    Object {
      "cpuNums": Array [
        4,
        8,
      ],
      "name": "cpu-request-2-limit-4",
    },
    Object {
      "cpuNums": Array [
        4,
        8,
      ],
      "name": "cpu-request-4-limit-8",
    },
    Object {
      "cpuNums": Array [
        4,
        8,
      ],
      "name": "cpu-request-8-limit-16",
    },
    Object {
      "cpuNums": Array [
        4,
        8,
      ],
      "name": "cpu-request-16-limit-32",
    },
    Object {
      "cpuNums": Array [
        32,
        64,
      ],
      "name": "cpu-request-4-limit-8",
    },
  ],
  "Memory_QuotaSize_Detail": Array [
    Object {
      "memoryNums": Array [
        "2 GiB",
        "4 GiB",
      ],
      "name": "memory-request-2-limit-4",
    },
    Object {
      "memoryNums": Array [
        "4 GiB",
        "8 GiB",
      ],
      "name": "memory-request-4-limit-8",
    },
    Object {
      "memoryNums": Array [
        "8 GiB",
        "16 GiB",
      ],
      "name": "memory-request-8-limit-16",
    },
  ],
  "Snapshot_QuotaSize_Detail": Array [
    Object {
      "name": "cpu-request-0.5-limit-1.5",
      "snapshotNums": undefined,
    },
    Object {
      "name": "cpu-request-1-limit-2",
      "snapshotNums": undefined,
    },
    Object {
      "name": "cpu-request-2-limit-4",
      "snapshotNums": undefined,
    },
    Object {
      "name": "cpu-request-4-limit-8",
      "snapshotNums": undefined,
    },
    Object {
      "name": "cpu-request-8-limit-16",
      "snapshotNums": undefined,
    },
    Object {
      "name": "cpu-request-16-limit-32",
      "snapshotNums": undefined,
    },
    Object {
      "name": "cpu-request-4-limit-8",
      "snapshotNums": undefined,
    },
  ],
  "Storage_QuotaSize_Detail": Array [
    Object {
      "name": "storage-1",
      "storageNums": Array [
        20,
        "50GiB",
        "25GiB",
      ],
    },
    Object {
      "name": "storage-2",
      "storageNums": Array [
        20,
        "50GiB",
        "25GiB",
      ],
    },
    Object {
      "name": "storage-3",
      "storageNums": Array [
        20,
        "50GiB",
        "25GiB",
      ],
    },
    Object {
      "name": "storage-4",
      "storageNums": Array [
        20,
        "50GiB",
        "25GiB",
      ],
    },
  ],
}
`;

exports[`Quota event handlers fetchQuotaSizes Quota sizes query error should throw 1`] = `"Unable to get quota sizes"`;

exports[`Quota event handlers fetchQuotaSizes Quota sizes query error should throw 2`] = `
Array [
  Array [
    Object {
      "text": "SELECT id, cpu_requests, cpu_limits FROM ref_cpu_quota;",
    },
  ],
]
`;
